--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -16,7 +16,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest # Change from ubuntu-latest to windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
