--- a/package.json
+++ b/package.json
@@ -3,34 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "15.2.1",
     "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.26.0",
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9",
+    "@types/node": "20.11.24",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "eslint": "9.0.0",
     "eslint-config-next": "15.2.1",
-    "jest": "^29.7.0",
-    "tailwindcss": "^4",
-    "ts-jest": "^29.2.6",
-    "typescript": "^5"
+    "typescript": "5.3.3",
+    "@tailwindcss/postcss": "4.0.0",
+    "tailwindcss": "4.0.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
