--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "dependencies": {
     "next": "15.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "4.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.11.24",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "eslint": "9.0.0",
     "eslint-config-next": "15.2.1",
-    "typescript": "5.3.3",
-    "@tailwindcss/postcss": "4.0.0",
-    "tailwindcss": "4.0.0"
+    "jest": "^29.7.0",
+    "tailwindcss": "4.0.0",
+    "ts-jest": "^29.2.6",
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=20.0.0"
