--- a/package.json
+++ b/package.json
@@ -15,19 +15,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "4.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "20.11.24",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "9.0.0",
     "eslint-config-next": "15.2.1",
     "jest": "^29.7.0",
-    "tailwindcss": "4.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.6",
     "typescript": "5.3.3"
-  },
-  "engines": {
-    "node": ">=20.0.0"
   }
 }
