--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,40 +2,49 @@ name: Deploy Next.js site to Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["master"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: windows-latest # Change from ubuntu-latest to windows-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Build Next.js site
-      run: npm run build
+      - name: Build with Next.js
+        run: npm run build
 
-    - name: Verify output directory
-      run: |
-        if [ ! -d "./out" ]; then
-          echo "Output directory does not exist, creating it."
-          mkdir -p ./out
-        fi
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
 
-    - name: Archive artifact
-      run: tar -czf out.tar.gz ./out
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: site
-        path: out.tar.gz
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
